# vel

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  package-lock.json  package.json  rust-toolchain.toml  shell.nix  vel.md  vel.toml
.gsd/: DECISIONS.md  (+3 more)
crates/vel-adapters-google-calendar/: Cargo.toml
crates/vel-adapters-google-calendar/src/: account_linking.rs  attendee_mapping.rs  availability_bridge.rs  calendar_mapping.rs  event_mapping.rs  google_ids.rs  lib.rs  module_manifest.rs  recurrence_sync.rs  tombstones.rs  windowed_import.rs
crates/vel-cli/: Cargo.toml
crates/vel-cli/src/: client.rs  main.rs
crates/vel-cli/src/command_lang/: ast.rs  completion.rs  explain.rs  infer.rs  mod.rs  parse.rs  preview.rs  registry.rs  tokenize.rs
crates/vel-cli/src/commands/: agent.rs  agents.rs  artifact.rs  backup.rs  capture.rs  commitments.rs  components.rs  config.rs  connect.rs  context.rs  daily_loop.rs  docs.rs  docs_catalog.generated.json  doctor.rs  end_of_day.rs  evaluate.rs  exec.rs  explain.rs  export_.rs  health.rs  import_.rs  inspect.rs  integrations.rs  journal.rs  llm.rs  loops.rs  mod.rs  morning.rs  node.rs  nudges.rs  people.rs  planning_profile.rs  policy.rs  projects.rs  recent.rs  review.rs  risk.rs  runs.rs  search.rs  settings.rs  (+7 more)
crates/vel-cli/tests/: cli_binary.rs
crates/vel-embedded-bridge/: Cargo.toml
crates/vel-embedded-bridge/src/: browser_wasm.rs  lib.rs  portable_core.rs
crates/vel-llm/: Cargo.toml  README.md
crates/vel-llm/src/: errors.rs  lib.rs  provider.rs  registry.rs  types.rs
crates/vel-llm/src/providers/: llama_cpp.rs  mod.rs  openai_api.rs  openai_oauth.rs
crates/vel-sim/: Cargo.toml
crates/vel-sim/src/: lib.rs
crates/vel-storage/: Cargo.toml
crates/vel-storage/src/: bootstrap.rs  db.rs  infra.rs  integrations.rs  lib.rs  mapping.rs  migration_artifacts.rs  migrations.rs  module_registry_store.rs  projection_rebuilder.rs  query.rs  runs.rs  runtime_cluster.rs  runtime_loops.rs  storage_backend.rs  threads.rs
crates/vel-storage/src/repositories/: artifacts_repo.rs  assistant_transcripts_repo.rs  backup_jobs_repo.rs  backup_runs_repo.rs  broker_events_repo.rs  canonical_objects_repo.rs  captures_repo.rs  chat_repo.rs  cluster_workers_repo.rs  commitment_risk_repo.rs  commitments_repo.rs  conflict_cases_repo.rs  connect_run_events_repo.rs  connect_runs_repo.rs  context_timeline_repo.rs  current_context_repo.rs  daily_check_in_events_repo.rs  daily_sessions_repo.rs  execution_contexts_repo.rs  execution_handoffs_repo.rs  import_repo.rs  inferred_state_repo.rs  integration_accounts_repo.rs  integration_connections_repo.rs  linking_repo.rs  mod.rs  nudges_repo.rs  people_repo.rs  planning_profiles_repo.rs  processing_jobs_repo.rs  projections_repo.rs  projects_repo.rs  registry_repo.rs  relations_repo.rs  run_refs_repo.rs  runs_repo.rs  runtime_loops_repo.rs  runtime_records_repo.rs  semantic_memory_repo.rs  settings_repo.rs  (+9 more)
crates/vel-storage/tests/: phase58_migration_replay.rs  phase58_projection_query.rs  phase58_storage_roundtrip.rs
crates/veld/: Cargo.toml
crates/veld-evals/: Cargo.toml
crates/veld-evals/fixtures/: sample-day-context.json
crates/veld-evals/src/: lib.rs  main.rs
crates/veld/src/: app.rs  broadcast.rs  errors.rs  lib.rs  llm.rs  main.rs  policy_config.rs  state.rs  worker.rs
crates/veld/src/adapters/: activity.rs  calendar.rs  git.rs  health.rs  messaging.rs  mod.rs  notes.rs  reminders.rs  todoist.rs  transcripts.rs
crates/veld/src/app/: route_groups.rs  tests.rs
crates/veld/src/middleware/: mod.rs
crates/veld/src/routes/: agent_grounding.rs  agents.rs  apple.rs  artifacts.rs  backup.rs  captures.rs  chat.rs  cluster.rs  command_lang.rs  commitment_scheduling.rs  commitments.rs  components.rs  connect.rs  context.rs  daily_loop.rs  diagnostics.rs  doctor.rs  evaluate.rs  execution.rs  explain.rs  health.rs  import.rs  integrations.rs  journal.rs  linking.rs  loops.rs  mod.rs  now.rs  nudges.rs  people.rs  planning_profile.rs  projects.rs  response.rs  risk.rs  runs.rs  search.rs  signals.rs  suggestions.rs  sync.rs  synthesis.rs  (+3 more)
crates/veld/src/services/: action_registry.rs  adaptive_policies.rs  agent_grounding.rs  agent_protocol.rs  agents.rs  apple_behavior.rs  apple_voice.rs  audit_emitter.rs  availability_projection.rs  backup.rs  broker.rs  calendar_explain.rs  capability_resolver.rs  check_in.rs  client_sync.rs  command_lang.rs  commitment_scheduling.rs  commitment_write_bridge.rs  components.rs  conflict_classifier.rs  connect.rs  connect_runtime.rs  context_generation.rs  context_runs.rs  core_module_bootstrap.rs  daily_loop.rs  daily_loop_inputs.rs  daily_loop_overdue.rs  day_plan.rs  doctor.rs  evaluate.rs  execution_context.rs  execution_launch.rs  execution_routing.rs  explain.rs  gcal_write_bridge.rs  grant_resolver.rs  harness_llm.rs  inference.rs  integration_runtime.rs  (+48 more)
crates/veld/tests/: agent_grounding.rs  agent_sdk.rs  apple_behavior_summary.rs  apple_voice_loop.rs  backup_flow.rs  chat_assistant_entry.rs  chat_conversation_call_mode.rs  chat_grounding.rs  command_lang_complete.rs  commitment_scheduling_api.rs  connect_runtime.rs  daily_loop_morning.rs  daily_loop_standup.rs  execution_context.rs  execution_routing.rs  phase59_error_surface.rs  phase59_membrane_happy_and_hostile.rs  phase60_bootstrap_idempotence.rs  phase60_module_policy.rs  phase60_provider_modules.rs  phase61_context_binding.rs  phase61_manual_invocation.rs  phase61_skill_mediation.rs  phase61_workflow_black_box.rs  phase61_workflow_error_surface.rs  phase62_availability.rs  phase62_calendar_objects.rs  phase62_recurrence_and_attendees.rs  phase63_sync_and_conflicts.rs  phase63_task_mapping.rs  phase63_todoist_accounts.rs  phase63_todoist_black_box.rs  phase63_todoist_error_surface.rs  phase64_calendar_mapping.rs  phase64_gcal_accounts.rs  phase64_gcal_black_box.rs  phase64_gcal_error_surface.rs  phase64_recurrence_and_availability.rs  phase65_contract_reconciliation.rs  phase65_cutover_routes.rs  (+10 more)
(+2762 files in other folders)
