[workspace]
members = [
  "crates/vel-core",
  "crates/vel-config",
  "crates/vel-storage",
  "crates/vel-api-types",
  "crates/vel-llm",
  "crates/veld",
  "crates/vel-cli",
  "crates/vel-sim",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
futures-util = "0.3"
axum = { version = "0.7", features = ["json", "ws"] }
clap = { version = "4.5", features = ["derive"] }
http = "1.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "time", "uuid"] }
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "signal", "sync", "process"] }
toml = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
sha2 = "0.10"
hex = "0.4"
serde_yaml = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.10"
iana-time-zone = "0.1"
