[package]
name = "vel-adapters-google-calendar"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hex.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
time.workspace = true
vel-core = { path = "../vel-core" }
vel-storage = { path = "../vel-storage" }

[dev-dependencies]
tokio.workspace = true
