[package]
name = "vel-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "vel"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
time.workspace = true
tokio.workspace = true
vel-api-types = { path = "../vel-api-types" }
vel-command-lang = { path = "../vel-command-lang" }
vel-config = { path = "../vel-config" }
vel-core = { path = "../vel-core" }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.20"
wiremock = "0.6"
