[package]
name = "vel-embedded-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
browser-wasm = ["dep:wasm-bindgen"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
wasm-bindgen = { version = "0.2", optional = true }
