[package]
name = "vel-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Provider-agnostic LLM layer for Vel: traits, types, registry, routing"

[dependencies]
async-trait = "0.1"
reqwest = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
