[package]
name = "vel-sim"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
uuid.workspace = true
vel-config = { path = "../vel-config" }
vel-core = { path = "../vel-core" }
vel-storage = { path = "../vel-storage" }
veld = { path = "../veld" }
