[package]
name = "vel-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
vel-api-types = { path = "../vel-api-types" }
vel-core = { path = "../vel-core" }
