[package]
name = "veld"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
futures-util.workspace = true
thiserror.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
time.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
iana-time-zone.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
vel-api-types = { path = "../vel-api-types" }
vel-config = { path = "../vel-config" }
vel-core = { path = "../vel-core" }
vel-llm = { path = "../vel-llm" }
vel-storage = { path = "../vel-storage" }
reqwest = { workspace = true }
serde_yaml.workspace = true

[dev-dependencies]
tower.workspace = true
