[package]
name = "veld"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
axum.workspace = true
futures.workspace = true
futures-util.workspace = true
thiserror.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
time.workspace = true
iana-time-zone.workspace = true
time-tz.workspace = true
tokio.workspace = true
sqlx.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
vel-api-types = { path = "../vel-api-types" }
vel-adapters-google-calendar = { path = "../vel-adapters-google-calendar" }
vel-adapters-todoist = { path = "../vel-adapters-todoist" }
vel-command-lang = { path = "../vel-command-lang" }
vel-config = { path = "../vel-config" }
vel-core = { path = "../vel-core" }
vel-llm = { path = "../vel-llm" }
vel-protocol = { path = "../vel-protocol" }
vel-storage = { path = "../vel-storage" }
parquet.workspace = true
reqwest = { workspace = true }
serde_yaml.workspace = true
if-addrs.workspace = true
toml.workspace = true

[dev-dependencies]
async-trait.workspace = true
tower.workspace = true
vel-agent-sdk = { path = "../vel-agent-sdk" }
